# ai-streamlit

./: .coveralls.yml  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CODEBASE_OVERVIEW.md  Dockerfile  ENV_CONFIGURATION.md  INSTALLATION_GUIDE.md  LICENSE  MIGRATION-NOTES.md  Makefile  README-PIPELINE.md  README-config.md  README.md  app.py  check_pickle.py  debug_run.py  deploy_to_azure.sh  docker-compose.yml  example-secrets.toml  file.txt  fix_config.py  fix_config_simple.py  fix_internal_assign_clusters.py  fix_test_imports.py  outlier_test_results.pkl  pyproject.toml  pytest.ini  requirements.txt  reset_config.py  review.txt  run_backend_tests.sh  run_backend_tests_manual.sh  run_config.yaml  run_dagster.sh  run_tests.sh  run_tests_with_coverage.sh  setup.sh  (+5 more)
.devcontainer/: devcontainer.json
app/: README.md  __init__.py  main.py  settings.py
assortment_chatbot/: Makefile  README.md  __init__.py  app.py  pyproject.toml
assortment_chatbot/config/: constants.py  settings.py  settings_manager.py
assortment_chatbot/core/: __init__.py
assortment_chatbot/core/agent/: __init__.py  data_chat_agent.py  pydantic_assistant.py  result_interpreter.py
assortment_chatbot/services/: azure_vault.py  duckdb_service.py
assortment_chatbot/ui/components/chat/: chat_interface.py
assortment_chatbot/ui/components/data/: data_uploader.py  validation.py
assortment_chatbot/ui/components/visualization/: __init__.py  pywalker_viz.py
assortment_chatbot/utils/: __init__.py  config_utils.py  file_utils.py  logging.py
backend/: .env.example  __init__.py  run_tests_with_coverage.sh
backup/: settings.py.bak
cache/: snowflake_cache.duckdb
chatbot/: app.py  duckdb_service.py  logger.pyi  settings.py
cli/: README.md  pyproject.toml
cli/src/cli/: __init__.py  commands.py
clustering-cli/: README.md  pyproject.toml
clustering-dashboard/: README.md  pyproject.toml
clustering-dashboard/.streamlit/: config.toml
clustering-dashboard/src/clustering/dashboard/: __init__.py  __main__.py  app.py
clustering-dashboard/src/clustering/dashboard/components/: __init__.py  correlation_matrix.py  data_summary.py  metric_card.py  parallel_coordinates.py  pygwalker_view.py  scatter_plot.py
clustering-dashboard/src/clustering/dashboard/config/: settings.py
clustering-dashboard/src/clustering/dashboard/pages/: 01_data_upload.py  02_data_explorer.py  03_visualization.py
clustering-dashboard/src/clustering/dashboard/utils/: __init__.py  visualization_utils.py
clustering-pipeline/: README.md  pyproject.toml
clustering-pipeline/src/clustering/: __init__.py
clustering-pipeline/src/clustering/pipeline/: __init__.py  app.py  definitions.py
clustering-pipeline/src/clustering/pipeline/assets/: __init__.py
clustering-pipeline/src/clustering/pipeline/assets/clustering/: __init__.py
clustering-pipeline/src/clustering/pipeline/assets/clustering/external_ml/: __init__.py  feature_engineering.py  model_training.py
clustering-pipeline/src/clustering/pipeline/assets/clustering/internal_ml/: feature_engineering.py  model_training.py
clustering-pipeline/src/clustering/pipeline/assets/merging/: __init__.py  analytics.py  merge.py
clustering-pipeline/src/clustering/pipeline/assets/preprocessing/: __init__.py  external.py  internal.py
clustering-pipeline/src/clustering/pipeline/resources/: __init__.py  data_io.py
clustering-pipeline/src/clustering/pipeline/resources/configs/: dev.yml  prod.yml
clustering-shared/: README.md  pyproject.toml
clustering-shared/src/clustering/: __init__.py
clustering-shared/src/clustering/shared/: __init__.py
clustering-shared/src/clustering/shared/common/: __init__.py  errors.py  filesystem.py  profiling.py
clustering-shared/src/clustering/shared/infra/: __init__.py  hydra_config.py
clustering-shared/src/clustering/shared/io/: __init__.py
clustering-shared/src/clustering/shared/io/readers/: __init__.py  blob_reader.py  csv_reader.py  excel_reader.py  json_reader.py  parquet_reader.py  pickle_reader.py  snowflake_reader.py
clustering-shared/src/clustering/shared/io/writers/: __init__.py  base.py  blob_writer.py  csv_writer.py  excel_writer.py  json_writer.py  parquet_writer.py  pickle_writer.py  snowflake_writer.py
clustering-shared/src/clustering/shared/schemas/: __init__.py  schemas.py  validation.py
config/: dev.py
configs/: base.yml  defaults.yml  external_clustering.yml  external_preprocessing.yml  internal_clustering.yml  internal_preprocessing.yml  merge_int_ext.yml
credentials/: openai_credentials.pfx  snowflake_key.pkl
dagster_home/: dagster.yaml
dashboard/: README.md  __init__.py  app.py  constants.py  llm_assistant.py  pyproject.toml  settings.py  settings_manager.py
dashboard/agent/: __init__.py  pydantic_assistant.py
dashboard/agent/core/: __init__.py  data_chat_agent.py  result_interpreter.py
dashboard/components/: __init__.py  chat_interface.py  cluster_viz.py  data_uploader.py  data_viewer.py  smart_viz.py
dashboard/components/chat/: __init__.py  chat_interface.py
dashboard/components/data/: __init__.py  data_uploader.py  data_viewer.py  validation.py
dashboard/components/visualization/: __init__.py  cluster_viz.py  pywalker_viz.py
dashboard/data/: __init__.py  duckdb_service.py  loader.py
dashboard/src/dashboard/: app.py
dashboard/src/dashboard/components/: pygwalker_view.py
dashboard/src/dashboard/utils/: __init__.py
dashboard/utils/: __init__.py
data/: README.md  sales_by_category.pkl  test_data.pkl
docs/: Makefile  PIPELINE_FIX_SUMMARY.md  conf.py  deployment.md  docker-deployment.md  index.rst
shared/: README.md  pyproject.toml
shared/src/shared/: __init__.py
shared/src/shared/common/: __init__.py  filesystem.py
shared/src/shared/infra/: __init__.py
shared/src/shared/io/: __init__.py
shared/src/shared/io/readers/: base.py  blob_reader.py  csv_reader.py  excel_reader.py  snowflake_reader.py
shared/src/shared/io/writers/: csv_writer.py  excel_writer.py  parquet_writer.py  pickle_writer.py
shared/src/shared/schemas/: __init__.py  schemas.py
(+1014 files in other folders)
