# =========================================
# Build System
# =========================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# =========================================
# Project Metadata
# =========================================

[project]
name = "clustering-dashboard"
version = "0.1.0"
description = "Dashboard for the clustering project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# =========================================
# Dependencies
# =========================================

dependencies = [
    # Web framework
    "streamlit>=1.28.0",
    "streamlit-option-menu>=0.3.6",
    "streamlit-extras>=0.3.5",
    "plotly>=5.14.0",
    "dash>=2.18.0",
    "dash-bootstrap-components>=1.6.0",

    # Data handling
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "pyarrow>=16.0.0",
    "plotly-express>=0.4.1",

    # Visualization
    "matplotlib>=3.7.0,<3.8.0",
    "plotly>=5.14.0,<6.0.0",
    "pydeck>=0.9.0",

    # Local packages
    "clustering-shared",
    "clustering-pipeline",
]

# =========================================
# Build Configuration
# =========================================

[tool.hatch.build.targets.wheel]
packages = ["src/clustering"]

# =========================================
# uv Configuration
# =========================================

[tool.uv]
# Use native PEP 420 namespace packages
package = true

# Entry point for the dashboard
[project.scripts]
clustering-dashboard = "clustering.dashboard.app:main"

# =========================================
# Code Quality
# =========================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
