# =========================================
# Build System
# =========================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# =========================================
# Project Metadata
# =========================================

[project]
name = "clustering-pipeline"
version = "0.1.0"
description = "Dagster pipeline for clustering data"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# =========================================
# Dependencies
# =========================================

dependencies = [
    # Pipeline core dependencies
    "dagster>=1.6.0",
    "dagster-webserver>=1.6.0",
    "dagster-duckdb-polars>=0.21.0",
    "dagster-pandera>=0.26.9",
    "dagster-postgres>=0.26.10",

    # Data processing
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "dask>=2025.2.0",
    "duckdb>=1.2.1",
    "numba>=0.60.0",
    "pandera[polars]>=0.21.0",
    "polars>=0.20.0",
    "pyarrow<19.0.0",
    "sqlalchemy<2.0",

    # Machine learning
    "scikit-learn>=1.3.2,<1.5.0",
    "matplotlib>=3.7.0,<3.8.0",
    "plotly>=5.14.0,<6.0.0",
    "pycaret>=3.3.0",
    "shap>=0.46.0",
    "kaleido==0.2.1",

    # Cloud & Storage
    "azure-identity>=1.21.0",
    "azure-storage-blob>=12.25.0",
    "dvc[azure]>=3.59.1",
    "snowflake-connector-python>=3.13.2",

    # Infrastructure & Scheduling
    "apache-airflow>=2.10.5",

    # Utilities
    "pyyaml>=6.0.1",
    "omegaconf>=2.3.0",
    "fastexcel>=0.13.0",
    "openpyxl>=3.1.5",
    "hydra-core>=1.3.2",
    "plyer>=2.1.0",

    # Local packages
    "clustering-shared",
]

# =========================================
# Build Configuration
# =========================================

[tool.hatch.build.targets.wheel]
packages = ["src/clustering"]

# =========================================
# uv Configuration
# =========================================

[tool.uv]
# Use native PEP 420 namespace packages
package = true

# =========================================
# Code Quality
# =========================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
