# =========================================
# Build System
# =========================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# =========================================
# Project Metadata
# =========================================

[project]
name = "clustering-shared"
version = "0.1.0"
description = "Shared utilities for the clustering project"
readme = "README.md"
requires-python = ">=3.10"

# =========================================
# Dependencies
# =========================================

dependencies = [
    # Core dependencies
    "pandas>=2.1.3",
    "numpy>=1.26.2",
    "pyyaml>=6.0.1",
]

# =========================================
# Build Configuration
# =========================================

[tool.hatch.build.targets.wheel]
packages = ["src/clustering"]

# =========================================
# uv Configuration
# =========================================

[tool.uv]
# Use native PEP 420 namespace packages
package = true

# =========================================
# Code Quality
# =========================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
