# =========================================
# Build System
# =========================================

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

# =========================================
# Project Metadata
# =========================================

[project]
name = "dashboard"
version = "0.1.0"
description = "Dashboard for the clustering project"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

# =========================================
# Dependencies
# =========================================

dependencies = [
    # Dashboard core deps
    "streamlit>=1.31.0",
    "pandas>=2.1.3",
    "numpy>=1.26.2",

    # Visualization
    "plotly>=5.20.0",
    "matplotlib>=3.7.0,<3.8.0",
    "yellowbrick>=1.5",
    "pygwalker>=0.4.9.15",
    "streamlit-elements>=0.1.0",

    # ML & Data
    "scikit-learn>=1.3.2,<1.5.0",

    # Utilities
    "pyyaml>=6.0.1",
    "python-dotenv>=1.0.0",

    # Local packages
    "shared @ {root:uri}/shared",
    "pipeline @ {root:uri}/pipeline",
]

# =========================================
# Optional Dependencies
# =========================================

[project.optional-dependencies]
dev = [
    # Linting & formatting
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "pre-commit>=3.5.0",
    # Testing
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
]

# =========================================
# Build Configuration
# =========================================

[tool.hatch.build.targets.wheel]
packages = ["src/dashboard"]

# =========================================
# UV Configuration
# =========================================

[tool.uv]
python-version = "3.10"

# =========================================
# Testing
# =========================================

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_functions = "test_*"

# =========================================
# Code Quality
# =========================================

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint.pydocstyle]
convention = "google"
